fix swaggerui
