# handlers/productType.go
@@ -23,7 +23,7 @@ func NewProductTypeHandler(productTypeSrv services.ProductTypeService) productTy
 // @Tags producttype
 // @Accept  json
 // @Produce  json
-// @Success 200 {object} models.Producttype
+// @Param        id   path      int  true  "ProductType ID"
 // @Router /producttype/ [post]
 func (h *productTypeHandler) CreateProductType(ctx *gin.Context){
 	var prodTypeReq models.ProductTypeCreate
@@ -52,7 +52,6 @@ func (h *productTypeHandler) CreateProductType(ctx *gin.Context){
 // @Tags producttype
 // @Accept  json
 // @Produce  json
-// @Success 200 {array} models.Producttype
 // @Router /producttype/ [get]
 func (h *productTypeHandler) GetAllProductTypes(ctx *gin.Context){
 	prodTypesRes, err := h.productTypeSrv.GetProductTypes()
@@ -73,7 +72,7 @@ func (h *productTypeHandler) GetAllProductTypes(ctx *gin.Context){
 // @Tags producttype
 // @Accept  json
 // @Produce  json
-// @Success 200 {object} models.Producttype
+// @Param        id   path      int  true  "ProductType ID"
 // @Router /producttype/:id [get]
 func (h *productTypeHandler) GetProductTypeByID(ctx *gin.Context){
 	id, err := GetIntId(ctx)
@@ -102,7 +101,7 @@ func (h *productTypeHandler) GetProductTypeByID(ctx *gin.Context){
 // @Tags producttype
 // @Accept  json
 // @Produce  json
-// @Success 200 {object} models.Producttype
+// @Param        id   path      int  true  "ProductType ID"
 // @Router /producttype/:id [put]
 func (h *productTypeHandler) UpdateProductTypeByID(ctx *gin.Context){
 	id, err := GetIntId(ctx)
@@ -138,6 +137,7 @@ func (h *productTypeHandler) UpdateProductTypeByID(ctx *gin.Context){
 // @Tags producttype
 // @Accept  json
 // @Produce  json
+// @Param        id   path      int  true  "ProductType ID"
 // @response 200 {string} string "Delete ProductType Successfully"
 // @Router /producttype/:id [delete]
 func (h *productTypeHandler) DeleteProductTypeByID(ctx *gin.Context){
@@ -167,7 +167,7 @@ func (h *productTypeHandler) DeleteProductTypeByID(ctx *gin.Context){
 // @Accept  json
 // @Produce  json
 // @response 200 {integer} int
-// @Router /producttype/ [get]
+// @Router /producttype/count [get]
 func (h *productTypeHandler) GetProductTypeCount(ctx *gin.Context) {
     count, err := h.productTypeSrv.GetProductTypeCount()
 	if err != nil {
